--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <html>
 <head>
-<title>Tilsan Translator by Tilsa Opichayev</title>
-    <html>
-    </style>
+    <title>Tilsan Translator by Tilsa Opichali</title>
     <link rel="stylesheet" href="css/mane.css">
 </head>
 <body>
-  <b>Updated 03. April 2024!</b>
-    <h1>Tilsanian Translator</h1>
-
-    <div>
-      <iframe src="https://lingojam.com/embed/YuriisTilsan" style="width:640px; height:465px;"></iframe>
+    <div class="container">
+        <p><strong>Updated: 6 December 2025</strong></p>
+        <h1>Tilsan Translator</h1>
+        
+        <div>
+            <iframe src="https://lingojam.com/embed/YuriisTilsan" 
+                    width="640" 
+                    height="465" 
+                    frameborder="0">
+            </iframe>
+        </div>
+        
+        <h2>Uh if the translator doesn't work:</h2>
+        <ul>
+            <li>Try typing your text again.</li>
+            <li>Refresh the page.</li>
+            <li>Check your internet connection.</li>
+        </ul>
     </div>
-  <h2>If the translator doesn't work, then try to type again in the translator or just refresh the page.<h2>
-
 </body>
 </html>
