--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Hiya. -->
+
 <html>
 <head>
     <title>Tilsan Translator by Tilsa Opichali</title>
@@ -5,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <p><strong>Updated: 6 December 2025</strong></p>
+        <p><strong>Updated: 6 December 2025 at 19:10</strong></p>
         <h1>Tilsan Translator</h1>
         
         <div>
@@ -18,9 +20,9 @@
         
         <h2>Uh if the translator doesn't work:</h2>
         <ul>
-            <li>Try typing your text again.</li>
-            <li>Refresh the page.</li>
-            <li>Check your internet connection.</li>
+            <p>Try typing your text again.</p>
+            <p>Refresh the page.</p>
+            <p>Check your internet connection.</p>
         </ul>
     </div>
 </body>
