--- a/name-creation.html
+++ b/name-creation.html
@@ -9,7 +9,7 @@ https://jsbin.com/soxivil
     <link rel="stylesheet" href="css/mane.css">
 </head>
 <body>
-  <b>WELCOME TO MY MADNESS! UPDATED: 7. MAY 2025 at 11:01</b>
+  <b>WELCOME TO MY MADNESS! UPDATED: 6 DECEMBER 2025 AT 19:12 (ONLY THIS TEXT. SORRY. FOR NOW.)</b>
     <h1>Generate a Tilsan name</h1>
     <h2>Choose a gender: 
         <select id="gender">
